--- a/application/clients/desktopV2/src/app/app.component.scss
+++ b/application/clients/desktopV2/src/app/app.component.scss
@@ -15,3 +15,19 @@ body {
     height: 1000px;
     overflow: auto;
 }
+
+#main-content {
+    height: 1000px;
+}
+
+@media (max-width: 768px) {
+    #main-content {
+        height: auto;
+    }
+}
+
+@media (max-width: 320px) {
+    #main-content {
+        height: auto;
+    }
+}
