--- a/application/clients/desktopV2/src/app/footer/footer.component.html
+++ b/application/clients/desktopV2/src/app/footer/footer.component.html
@@ -1,48 +1,50 @@
-<section id="i35mb-2" class="gpd-section">
-    <div id="i9h8t" class="gpd-container gpd-cnt">
-        <div id="iplo9g-2" class="gdp-row gpd-grid">
-            <div class="cell gpd-clm">
-                <div id="i05ihu-2" class="gdp-row gpd-grid">
-                    <div class="cell gpd-clm"><img id="i3y8m8-2" src="./assets/images/header/logo.png" />
-                    </div>
-                    <div class="cell gpd-clm">
-                        <div id="i1uhi-2" class="gpd-text">The Cloud Native Low Code Platform
+<div>
+    <section id="i35mb-2" class="gpd-section">
+        <div id="i9h8t" class="gpd-container gpd-cnt">
+            <div id="iplo9g-2" class="gdp-row gpd-grid">
+                <div class="cell gpd-clm">
+                    <div id="i05ihu-2" class="gdp-row gpd-grid">
+                        <div class="cell gpd-clm"><img id="i3y8m8-2" src="./assets/images/header/logo.png" />
                         </div>
-                    </div>
-                    <div class="cell gpd-clm">
-                        <div id="i7b2pk-2" class="gpd-text">151 N Maitland AVE STE 941096 Maitland, FL 32751-5515
-                            <br />info@geppettosoftware.com
-                            <br />​​​​​​​001 (863) 888-0152
-                            <br />
+                        <div class="cell gpd-clm">
+                            <div id="i1uhi-2" class="gpd-text">The Cloud Native Low Code Platform
+                            </div>
+                        </div>
+                        <div class="cell gpd-clm">
+                            <div id="i7b2pk-2" class="gpd-text">151 N Maitland AVE STE 941096 Maitland, FL 32751-5515
+                                <br />info@geppettosoftware.com
+                                <br />​​​​​​​001 (863) 888-0152
+                                <br />
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="i3dj3f-2" class="cell gpd-clm">
-                <div id="i4vob-2" class="gdp-row gpd-grid">
-                    <div class="cell gpd-clm">
-                        <div id="ix4fp-2" class="gpd-text">Subscribe To Our Updates:
+                <div id="i3dj3f-2" class="cell gpd-clm">
+                    <div id="i4vob-2" class="gdp-row gpd-grid">
+                        <div class="cell gpd-clm">
+                            <div id="ix4fp-2" class="gpd-text">Subscribe To Our Updates:
+                            </div>
                         </div>
+                        <div id="i0ubq-2" class="cell gpd-clm"><input type="email" placeholder="Your Email" id="i20op-2" class="form-control" /></div>
+                        <div id="ilgri-2" class="cell gpd-clm"><button type="button" id="iuyio-2" class="btn btn-primary">Subscribe</button></div>
                     </div>
-                    <div id="i0ubq-2" class="cell gpd-clm"><input type="email" placeholder="Your Email" id="i20op-2" class="form-control" /></div>
-                    <div id="ilgri-2" class="cell gpd-clm"><button type="button" id="iuyio-2" class="btn btn-primary">Subscribe</button></div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<section id="iev6k" class="gpd-section">
-    <div id="i8nqp" class="gpd-container gpd-cnt">
-        <div id="ipadw" class="gdp-row gpd-grid">
-            <div id="ijc2f" class="cell gpd-clm">
-                <div id="i6fl8s" class="gpd-text">Support</div>
-            </div>
-            <div id="ifizg" class="cell gpd-clm">
-                <div id="ibzdj" class="gpd-text">Terms</div>
-            </div>
-            <div id="ipz5u" class="cell gpd-clm">
-                <div id="ictt1" class="gpd-text">privacy</div>
+    </section>
+    <section id="iev6k" class="gpd-section">
+        <div id="i8nqp" class="gpd-container gpd-cnt">
+            <div id="ipadw" class="gdp-row gpd-grid">
+                <div id="ijc2f" class="cell gpd-clm">
+                    <div id="i6fl8s" class="gpd-text">Support</div>
+                </div>
+                <div id="ifizg" class="cell gpd-clm">
+                    <div id="ibzdj" class="gpd-text">Terms</div>
+                </div>
+                <div id="ipz5u" class="cell gpd-clm">
+                    <div id="ictt1" class="gpd-text">privacy</div>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
