--- a/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.html
@@ -4,17 +4,24 @@
 <div class="container">
     <h1 style="text-align: center;">Feature Details</h1>
 
-    <h3 id="project_heading">Selected Feature: {{ selectedFeatureName }}</h3>
+    <div class="row">
+        <div class="col-lg-12">
+            <p id="project_heading">Selected Feature: {{ selectedFeatureName }}</p>
+        </div>
+    </div>
+
     <div class="row" style="margin-top: 8%;">
         <mat-accordion>
             <mat-expansion-panel [expanded]="true">
                 <mat-expansion-panel-header style="padding: 5%;">
                     <mat-panel-title id="feature_heading">Entities </mat-panel-title>
                 </mat-expansion-panel-header>
-                <div class="float-end">
-                    <button class="btn" id="ihclgr" color="primary">Add Entity</button>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <button class="btn" id="ihclgr" color="primary">Add Entity</button>
+                    </div>
                 </div>
-                <div class="row" *ngIf="featureEntityDetails.length> 0">
+                <div class="row mt-2" *ngIf="featureEntityDetails.length> 0">
                     <div class="col-sm-4" *ngFor="let entity of featureEntityDetails; let i = index">
                         <div class="card">
                             <div class="card-body">
@@ -29,10 +36,10 @@
                                 </div>
                                 <div class="d-grid gap-2 mt-3">
                                     <div class="row">
-                                        <div class="col-lg-8">
+                                        <div class="col-lg-8 col-md-8 col-sm-8">
                                             <button class="btn btn-block btn-primary" type="button">Edit</button>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
                                             <button class="btn btn-danger" type="button">Delete</button>
                                         </div>
                                     </div>
