--- a/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.scss
@@ -54,7 +54,7 @@
 }
 
 #project_heading {
-    //font-size: 20px;
+    font-size: 25px;
     text-align: center;
     font-family: Montserrat, sans-serif;
     font-weight: 700;
@@ -70,4 +70,16 @@
     font-weight: 700;
     font-size: 19px;
     padding: 0 0 0 10px;
+}
+
+@media (max-width: 768px) {
+    #project_heading {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 320px) {
+    #project_heading {
+        font-size: 14px;
+    }
 }
