--- a/application/clients/desktopV2/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.scss
@@ -9,6 +9,19 @@
     float: right;
 }
 
+#add_feature_heading {
+    text-align: center;
+    font-family: Montserrat, sans-serif;
+    font-weight: 600;
+    margin: 5px 0 5px 0;
+    color: #302C5E;
+    white-space: nowrap;
+}
+
+:host ::ng-deep .ck-editor__editable_inline {
+    min-height: 200px !important;
+}
+
 ::ng-deep .mat-expansion-indicator::after {
     height: 20px;
     width: 35px;
@@ -75,3 +88,23 @@
     font-size: 19px;
     padding: 0 0 0 10px;
 }
+
+#create_btn {
+    background-color: #5DB18C;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px 20px 10px 20px;
+}
+
+#cancel_btn {
+    background-color: #9297A7;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px 20px 10px 20px;
+}
+
+@media (max-width: 768px) {}
