--- a/application/clients/desktopV2/src/app/project/project.component.html
+++ b/application/clients/desktopV2/src/app/project/project.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
         <mat-expansion-panel [expanded]="true">
-            <mat-expansion-panel-header>
+            <mat-expansion-panel-header style="padding: 5%;">
                 <mat-panel-title id="i0tser">
                     {{'PROJECT.APPLICATION' | translate}}
                 </mat-panel-title>
@@ -50,7 +50,7 @@
             </div>
         </mat-expansion-panel>
         <mat-expansion-panel [expanded]="false">
-            <mat-expansion-panel-header>
+            <mat-expansion-panel-header style="padding: 5%;">
                 <mat-panel-title id="i0tse">
                     {{'PROJECT.GEPPETTO_APPLICATION' | translate}}
                 </mat-panel-title>
