--- a/application/clients/desktop/src/assets/templates/weconnect-template/index.html
+++ b/application/clients/desktop/src/assets/templates/weconnect-template/index.html
@@ -65,11 +65,13 @@
         function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
             document.getElementById("main").style.marginLeft = "250px";
+            document.getElementById("foot").style.marginLeft = "250px";
             document.getElementById("mySidenav").style.backgroundColor = "#1E1E1E";
         }
         function closeNav() {
             document.getElementById("mySidenav").style.width = "0";
             document.getElementById("main").style.marginLeft = "0%";
+            document.getElementById("foot").style.marginLeft = "0";
         }
     </script>
 
@@ -92,49 +94,30 @@
 </head>
 
 <body>
-    <div id="i9d5" class="gpd-navbar">
-        <div id="ihgh" class="gpd-container gpd-cnt">
-            <div id="ighf" class="gdp-row gpd-grid sticky">
-                <div id="ik48" class="cell gpd-clm">
-                    <div id="ij0o8m" class="gdp-row gpd-grid">
-                        <span onclick="openNav()" class="">
-                            <div id="i8h3sg" class="cell gpd-clm"><img id="igjp1x"
-                                    src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/8762113d99a84fa5baf2345306d4f0c3_hamburger3.png" />
-                            </div>
-                        </span>
-                        <div data-column="1" id="ig7k" class="cell"><img
-                            src="https://cdn.grapedrop.com/u5f631954a3924f379de303e603ec8319/8d62be450a774a868eaef16b0d0054e5_group_18991.png"
-                            id="i3go0t" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <nav id="template-i090p" class="">
-        <div id="ij0o8m" class="gdp-row gpd-grid">
-            <div id="template-iyoc4" class="navbar-header">
-
-                <button type="button" data-toggle="collapse" data-target="#myNavbar" id="template-ioico"
-                    class="navbar-toggle">
-                    <span id="template-iy169" class="icon-bar">
-                    </span>
-
-                    <span id="template-ivo7o" class="icon-bar">
-                    </span>
-
-                    <span id="template-ihry1" class="icon-bar">
-                    </span>
-
-                </button>
-            </div>
-            <div id="mySidenav" class="sidenav">
-                <a [routerLink]="['javascript:void(0)']" onclick="closeNav()" id="template-if7ki" class="closebtn">
-                    <div id="ibuiwl" class="cell gpd-clm"><img id="imvflv"
-                            src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/cdca723990474ba9ba33337d35ef399d_close.png" />
-                    </div>
-                </a>
-                <div id="MainMenu" class="">
+        <div id="i9d5" class="gpd-navbar">
+            <div id="ihgh" class="gpd-container gpd-cnt">
+                <div id="ighf" class="gdp-row gpd-grid sticky">
+                    <div id="ik48" class="cell gpd-clm">
+                        <div id="ij0o8m" class="gdp-row gpd-grid">
+                            <span onclick="openNav()" class="">
+                                <div id="i8h3sg" class="cell gpd-clm"><img id="igjp1x"
+                                        src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/8762113d99a84fa5baf2345306d4f0c3_hamburger3.png" />
+                                </div>
+                            </span>
+                            <div data-column="1" id="ig7k" class="cell"><img
+                                    src="https://cdn.grapedrop.com/u5f631954a3924f379de303e603ec8319/8d62be450a774a868eaef16b0d0054e5_group_18991.png"
+                                    id="i3go0t" />
+                            </div>
+                        </div>
+                        <div id="mySidenav" class="sidenav">
+                            <a [routerLink]="['javascript:void(0)']" onclick="closeNav()" id="template-if7ki" class="closebtn">
+                                <div id="ibuiwl" class="cell gpd-clm"><img id="imvflv"
+                                        src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/cdca723990474ba9ba33337d35ef399d_close.png" />
+                                </div>
+                            </a>
+                            <div id="MainMenu">
                     <div id="i0xya-2" class="cell gpd-clm">
                         <div id="i60c7-2" class="gdp-row gpd-grid">
                             <div id="ibuiwl" class="cell gpd-clm"><img id="imvflv" />
@@ -206,6 +189,9 @@
                 </div>
             </div>
         </div>
+        </div>
+            </div>
+        </div>
     </nav>
     <header id="in8it8" class="header1">
         <div id="i575rl" class="container">
@@ -230,14 +216,8 @@
             </div>
         </div>
     </header>
-   
-    <div id="main" style="transition: margin-left .5s">
 
-        <style>
-            html {
-                scroll-behavior: smooth;
-            }
-        </style>
+    <section id="main" style="transition: margin-left .5s">
         <section id="ia7qb4" class="gpd-section">
             <div id="iemlag" class="gpd-container gpd-cnt">
                 <div id="iz71l6" class="gdp-row gpd-grid">
@@ -524,7 +504,9 @@
                 </div>
             </div>
         </section>
-        <footer id="i65hs" class="gpd-section">
+    </section>
+    <footer id="foot">
+        <section id="i65hs" class="gpd-section">
             <div id="i392i" class="gpd-container gpd-cnt">
                 <div id="i4h7ti" class="gdp-row gpd-grid">
                     <div class="cell gpd-clm">
@@ -557,8 +539,7 @@
                         <div id="i3csxa" class="gdp-row gpd-grid">
                             <div id="in1j2l" class="cell gpd-clm">
                                 <h1 id="ier6xc" class="gpd-header">Quick Links</h1>
-                                <div id="i3hscw" class="footer-item"><a href="##" id="ievkac"
-                                        class="footer-link">Home</a>
+                                <div id="i3hscw" class="footer-item"><a href="##" id="ievkac" class="footer-link">Home</a>
                                 </div>
                                 <div id="iqzlfd" class="footer-item"><a href="##" id="i9dt9l"
                                         class="footer-link">Products</a></div>
@@ -578,10 +559,8 @@
                     </div>
                 </div>
             </div>
-        </footer>
-    </div>
-    <!-- </div>
-    </div> -->
+        </section>
+    </footer>
     <script>var items = document.querySelectorAll('#i3dv0k');
         for (var i = 0, len = items.length; i < len; i++) {
             (function () { var t, e = 0, n = function () { var t, e = document.createElement("void"), n = { transition: "transitionend", OTransition: "oTransitionEnd", MozTransition: "transitionend", WebkitTransition: "webkitTransitionEnd" }; for (t in n) if (void 0 !== e.style[t]) return n[t] }(), r = function (t) { e = 1; var n = function (t) { var e = window.getComputedStyle(t), n = e.display, r = (e.position, e.visibility, e.height, parseInt(e["max-height"])); if ("none" !== n && "0" !== r) return t.offsetHeight; t.style.height = "auto", t.style.display = "block", t.style.position = "absolute", t.style.visibility = "hidden"; var i = t.offsetHeight; return t.style.height = "", t.style.display = "", t.style.position = "", t.style.visibility = "", i }(t), r = t.style; r.display = "block", r.transition = "max-height 0.25s ease-in-out", r.overflowY = "hidden", "" == r["max-height"] && (r["max-height"] = 0), 0 == parseInt(r["max-height"]) ? (r["max-height"] = "0", setTimeout(function () { r["max-height"] = n + "px" }, 10)) : r["max-height"] = "0" }; "gjs-collapse" in this || this.addEventListener("click", function (i) { if (i.preventDefault(), !e) { var o = this.closest("[data-gjs=navbar]").querySelector("[data-gjs=navbar-items]"); r(o), t || (o.addEventListener(n, function () { e = 0; var t = o.style; 0 == parseInt(t["max-height"]) && (t.display = "", t["max-height"] = "") }), t = 1) } }), this["gjs-collapse"] = 1 }.bind(items[i]))();
@@ -2654,11 +2633,11 @@
         }
 
         .sidenav {
-            
+
             width: 0px;
             position: fixed;
             z-index: 1;
-            top: 0px;
+            top: 69px;
             left: 0px;
             background-color: rgba(0, 0, 0, 0.5);
             overflow-x: hidden;
@@ -2666,7 +2645,6 @@
             transition-timing-function: ease;
             transition-delay: 0s;
             transition-property: all;
-            padding-top: 60px;
             font-family: "Open Sans", sans-serif;
         }
 
@@ -2682,15 +2660,11 @@
             transition-property: all;
             background-color: transparent;
             font-size: 20px;
-            padding-top: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-            padding-left: 10px;
         }
 
         @media screen and (max-height: 450px) {
-            
-        .sidenav a {
+
+            .sidenav a {
                 font-size: 18px;
             }
         }
@@ -2698,7 +2672,7 @@
         .sidenav .closebtn {
             color: white;
             position: absolute;
-            top: 48px;
+            top: -18px;
             right: 0px;
             font-size: 36px;
             margin-left: 50px;
@@ -4837,6 +4811,7 @@
             background-color: #1E1E1E;
             padding: 14px 0 14px 0;
             min-height: 70px;
+            position: fixed;
         }
 
         #ik48 {
@@ -4864,9 +4839,9 @@
             color: black;
         }
 
-        
 
-        
+
+
 
         .gpd-navbar__menu {
             display: none;
@@ -5777,7 +5752,7 @@
             flex: 1 1 100%;
         }
 
-        
+
         #i844l:hover {
             background-color: #01BC9A;
         }
