--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -1,3 +1,3 @@
 <div class="mainDiv" id="editor-c">
-    <div style="padding: 25px">Hello World!!!</div>
+    <div style="padding: 25px"></div>
 </div>
