--- a/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.scss
@@ -26,6 +26,24 @@
     border-top-width: 0px;
 }
 
+#create_btn {
+    background-color: #5DB18C;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px 20px 10px 20px;
+}
+
+#cancel_btn {
+    background-color: #9297A7;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px 20px 10px 20px;
+}
+
 #feature_heading {
     font-size: 20px;
     font-family: Montserrat, sans-serif;
