modified ecommerce template

--- a/application/clients/desktop/src/assets/templates/electric-ecommerce-template/index.html
+++ b/application/clients/desktop/src/assets/templates/electric-ecommerce-template/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-
+    <title>Geppetto-Electric-ecommerce-template</title>
     <meta name="description" content="">
     <meta name="generator" content="Grapedrop">
 
@@ -35,6 +35,7 @@
     <meta name="twitter:image" content="">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    
 
     <link rel="icon" type="image/png"
         href="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/p0b3d466368dc439c9b5a7237d074328a/favicon.png?1631078156">
@@ -102,11 +103,11 @@
                         <div id="i937c" class="burger-line-dark"></div>
                         <div id="ivrjf" class="burger-line-dark"></div>
                     </div><a id="i2rxk" class="gpd-link-box"><img id="iiarl"
-                            src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/dc34d17f3efb48e9b11b8f4e9357397c_group_2.png" /></a>
+                            src="https://cdn.grapedrop.com/u5129d9550ab64e5a8a9dd4793644e5e7/714a528bf62f4d1aa0eb507da72fe9ee_electricglide.png" /></a>
                 </div>
                 <div data-column="1" id="imidj" class="cell">
                     <div data-gjs="navbar-items" id="i4h0k" class="menu-container">
-                        <nav data-gjs="navs" class="menu"><a href="##" id="i4igt" class="menu-link">Catalog</a><a
+                        <nav data-gjs="navs" class="menu"><a href="./catalog screen/index.html" id="i4igt" class="menu-link">Catalog</a><a
                                 href="##" id="iu695" class="menu-link">Comparision</a><a href="##" id="i0sgh"
                                 class="menu-link">Quiz</a><a href="##" id="id63f" class="menu-link">Forum</a></nav>
                     </div>
