--- a/application/clients/desktop/src/assets/templates/electric-ecommerce-template/catalog screen/index.html
+++ b/application/clients/desktop/src/assets/templates/electric-ecommerce-template/catalog screen/index.html
@@ -1100,7 +1100,7 @@
         <div id="id6huv" class="gpd-container gpd-cnt">
             <div id="itw981" class="gdp-row gpd-grid">
                 <div id="ij5fhj" class="cell gpd-clm"><img id="ix930x"
-                        src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/3491850cbb0f49e7a1cf483d90382ade_group_28589.png" />
+                        src=https://cdn.grapedrop.com/u5129d9550ab64e5a8a9dd4793644e5e7/714a528bf62f4d1aa0eb507da72fe9ee_electricglide.png />
                     <div id="i5bz1g" class="gpd-text">Compare hundreds of electric bikes<br>at one website.</div>
                 </div>
                 <div id="ij7eeh" class="cell gpd-clm">
