--- a/application/clients/desktopV2/src/app/footer/footer.component.html
+++ b/application/clients/desktopV2/src/app/footer/footer.component.html
@@ -48,3 +48,31 @@
         </div>
     </section>
 </div>
+<!-- <footer class="footer" style="position: relative;
+left: 0;
+bottom: 0;
+width: 100%;
+
+padding:1%;
+background-image: url('https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/58a0390cd05c4fd3acf632b47d1635f6_123.png'), linear-gradient(to right, #121732 0%, #000000 100%);
+color: white; 
+">
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="./assets/images/header/logo.png" alt="">
+                    <h5>The Cloud Native Low Code Platform</h5>
+                    <h5>151 N Maitland AVE STE 941096 Maitland, FL 32751-5515</h5>
+                    <h5>info@geppettosoftware.com</h5>
+                    <h5>001 (863) 888-0152</h5>
+                </div>
+                <div class="col-lg-6">
+                    <h5>Subscribe To Our Updates:</h5>
+                    <input type="text" class="form-control">
+                    <button class="btn btn-primary">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </section>
+</footer> -->
