--- a/application/clients/desktopV2/src/app/app.component.scss
+++ b/application/clients/desktopV2/src/app/app.component.scss
@@ -1,9 +1,8 @@
-html,
-body {
-    height: 100%;
-    margin: 0;
-}
-
+// html,
+// body {
+//     height: 100%;
+//     margin: 0;
+// }
 .wrapper {
     height: 100%;
     display: flex;
@@ -18,6 +17,29 @@ body {
 
 #main-content {
     height: 1000px;
+}
+
+@media (min-width: 1350px) {
+    #footer_id {
+        position: absolute;
+        bottom: 0px;
+        height: auto;
+        left: 0px;
+        right: 0px;
+        overflow: hidden;
+    }
+}
+
+@media screen and (min-width: 1024px) and (min-height: 1320px) {
+    /* iPad Pro */
+    #footer_id {
+        position: absolute;
+        bottom: 0px;
+        height: auto;
+        left: 0px;
+        right: 0px;
+        overflow: hidden;
+    }
 }
 
 @media (max-width: 768px) {
