--- a/application/clients/desktopV2/src/app/footer/footer.component.scss
+++ b/application/clients/desktopV2/src/app/footer/footer.component.scss
@@ -2,7 +2,7 @@
     background-color: #000001;
     padding: 40px 0 40px 0;
     margin: 0 0 0 0;
-    background-image: url('https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/58a0390cd05c4fd3acf632b47d1635f6_123.png'), linear-gradient(to right, #121732 0%, #000000 100%);
+    background-image: url('/assets/images/header/footer_icon.png'), linear-gradient(to right, #121732 0%, #000000 100%);
     background-repeat: no-repeat, repeat;
     background-position: center center, left top;
     background-attachment: scroll, scroll;
