--- a/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/feature-details/feature-details.component.scss
@@ -26,6 +26,16 @@
     border-top-width: 0px;
 }
 
+#desk_img {
+    width: 150px;
+    height: 150px;
+}
+
+#mobile_img {
+    width: 150px;
+    height: 150px;
+}
+
 #create_btn {
     background-color: #5DB18C;
     font-family: Montserrat, sans-serif;
